--- a/stylesheet/app.css
+++ b/stylesheet/app.css
@@ -5,13 +5,15 @@
   /*font-weight: bold;*/
   opacity: 1;
   text-align: right;
-  margin-right: -5%;
   margin-top: -6%;
   background-color: black;
   float: right;
-  padding: 1.5% 8% 1.5% 3%;
+  padding: 1.5% 4% 1.5% 3%;
   font-style: italic;
-  border-radius: 20px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+
+
 
 }
 
