--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -621,7 +621,7 @@
    font-family: aller;
    padding: 10px;
    border: 1px solid white;
-   margin: auto;
+   margin: -15px auto 10px auto;
    text-align: center;
    color: white;
    letter-spacing: 1.1;
