--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -5,13 +5,34 @@
 /*labtop*/
 @media (max-width:2480px){
 
+  h1 a,
+  h1 a:visited,
+  h1 a:link,
+  h1 a:active{
+    /*color: white;*/
+    color: transparent;
+    text-shadow: none;
+    opacity: 1;
+    background-image: url(../images/fractal1.jpg);
+    background-size: 100% 20vh;
+    -webkit-background-clip: text;
+    background-clip: text;
+    text-decoration: none;
+    /*text-shadow: 0px 0px 50px #3a75bb;*/
+    -webkit-transition: background-image 1s ease;
+    -moz-transition: background-image 1s ease;
+    -ms-transition: background-image 1s ease;
+    -o-transition: background-image 1s ease;
+    transition: background-image 1s ease;
+  }
+
   h1 a:hover,
   h1:hover{
     color: transparent;
     text-shadow: none;
     opacity: 1;
     background-image: url(../images/fractal2.jpg);
-    background-size: 35vw 20vh;
+    background-size: 100% 20vh;
     -webkit-background-clip: text;
     background-clip: text;
     transition: background-image 2s ease;
@@ -88,8 +109,7 @@
   }
 
   img.resume_pdf{
-    height: 100%;
-    width: 100%;
+    width: 98%;
   }
 
   p#hello{
