--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -61,10 +61,6 @@
     opacity: .9;
   }
 
-
-
-
-
   h2.button-row {
     letter-spacing: .15em;
     font-size: 1vw;
@@ -249,6 +245,10 @@
     bottom: -15%;
     left: 0%;
     z-index: 5000;
+  }
+
+  img.resume_pdf{
+    width: 95%;
   }
 
   .portfolio_images{
