--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -490,7 +490,10 @@
     width: 75vw;
     height: auto;
     animation: cloud2 100s linear;
-  }
+	}
+	
+	@keyframes cloud2{0% {left: -67vw;} 100% {left: 100vw;}}
+	
 
   .img_introcloud3{
     position: absolute;
@@ -502,10 +505,7 @@
     height: auto;
     animation: cloud3 500s linear;
   }
-
-@keyframes cloud1{0% {left: 0%;} 100% {left: 100vw;}}
 	
-@keyframes cloud2{0% {left: -67vw;} 100% {left: 100vw;}}
 
 @keyframes cloud3{0% {right: 0%;} 100% {right: -100vw;}}
 
@@ -533,7 +533,18 @@ h1 {
     display: block;
   }
 
-  .container_three{
+.container_two{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+	align-items: center;
+    vertical-align: middle;
+	width: 45vw;
+    height: 50vh;
+  }	
+	
+.container_three{
     position: relative;
     display: flex;
     flex-direction: column;
@@ -544,18 +555,8 @@ h1 {
     height: 60vh;
   }
 
-	 .container_two{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-	align-items: center;
-    vertical-align: middle;
-	width: 45vw;
-    height: 50vh;
-  }
 	
-  div.img_relative.labtop{
+div.img_relative.labtop{
     height: 100vh;
   }
 
@@ -564,24 +565,22 @@ h1 {
   }
 
   .img_labtop{
-    top: 0px;
+	  display: none;
+    /*top: 0px;
     overflow:hidden;
-	 zoom: 20%;
+	 zoom: 20%;*/
   }
 
   .img_plant{
-    left: 0%;
+	  display: none;
+    /*left: 0%;*/
   }
 
   img.resume_pdf{
-    width: 105%;
+    width: 80%;
   }
 
-  h4.email{
-    left: -50px;
-    zoom:190%;
-    top: 90px;
-  }
+
 
   h4 a,
   h4 > a:visited,
@@ -606,7 +605,7 @@ h1 {
 
 
 
-  .container-fluid.ninetywidth{
+ .container-fluid.ninetywidth{
     margin-left: -7.5%;
   }
 
@@ -678,7 +677,7 @@ h1 {
 
  }
 
- .email{
-   zoom: 110%;
-	 margin: auto;
-   transition: all .1s ease-in-out;}}
+h4.email{
+	margin: auto;
+   transition: all .1s ease-in-out;}
+}
