more just intro

--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -486,7 +486,7 @@
 	align-items: center;
     vertical-align: middle;
 	width: 45vw;
-    height: auto;
+    height: 225px;
   }	
 	
   .img_intrograss{
