--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -494,7 +494,7 @@
     z-index: 0;
     opacity: 1;
     bottom: 0;
-    left: -30vh;
+    left: -30px;
     zoom: 300%;
     height: auto;
   }
@@ -564,6 +564,7 @@ h1 {
   }
 
 h2.button-row{
+	margin-left: 0px;
     -webkit-perspective: 1000px;
     -moz-perspective: 1000px;
     perspective: 1000px;
@@ -573,7 +574,6 @@ h2.button-row{
     font-weight: bold;
     display: block;
 	width: 35vw;
-	margin-left: 0px;
 	}
 	
 h2.button-row > a::before, h2.button-row > a::after{
