--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -690,6 +690,13 @@ div.img_relative.labtop{
  .rendeztake.take_me_there a:hover{
    border: 1px solid green;
  }
+	
+	#labtopresumewidth {
+		margin-left: 5vw;
+	}
+	
+#backtotop 
+	{display: none;}
 
  .instagram,
  .facebook,
