CV 85vh and mobile quote color

--- a/stylesheet/nut.css
+++ b/stylesheet/nut.css
@@ -34,7 +34,7 @@
 
 .resume_pdf{
   text-align: right;
-  width: 70%;
+  height: ;
   height: auto;
   box-shadow: 6px 6px 6px black;
   -webkit-transform:scale(1); /* Safari and Chrome */
