--- a/stylesheet/nut.css
+++ b/stylesheet/nut.css
@@ -34,7 +34,7 @@
 
 .resume_pdf{
   text-align: right;
-  height: ;
+  height: 85vh;
   height: auto;
   box-shadow: 6px 6px 6px black;
   -webkit-transform:scale(1); /* Safari and Chrome */
