--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -688,7 +688,7 @@ h4.email{
 	
   .container_two.contact{
     width: 100%;
-    margin-left: -12.5vw;
+    margin-left: 0%;
   }
 	
 .img_contact{
