--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -224,7 +224,7 @@
   }
 
   .i_believe{
-    padding-left: 15%;
+    padding-left: 55%;
     padding-right: 15%;
     font-size: 1.5vw;
   }
@@ -314,7 +314,7 @@
 
   .i_believe{
     padding-top: 2%;
-    padding-left: 0%;
+    padding-left: 40%;
     padding-right:5%;
     padding-bottom: 5%;
     font-size: 2.5vw;
@@ -330,8 +330,8 @@
 
   .quote.embossed.container_two{
     zoom: 180%;
-    padding-left: 0px;
-    padding-right: 0px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 
 
@@ -537,15 +537,17 @@ div.img_relative.labtop{
   }
 
   .img_labtop{
-	  display: none;
-    /*top: 0px;
+    top: 0px;
     overflow:hidden;
-	 zoom: 20%;*/
+	    transform: scaleY(-1);
+	 zoom: 15%;
   }
 
   .img_plant{
-	  display: none;
-    /*left: 0%;*/
+	  zoom: 15%;
+	  
+	  top: 0%;
+    left: 15%;
   }
 
   img.resume_pdf{
@@ -654,6 +656,7 @@ div.img_relative.labtop{
 	{display: none;}
 	
 h4.email{
+	position: relative;
 	margin: auto;
 	left: 0vw;
 	top:150%;
