--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -314,7 +314,7 @@
 
   .i_believe{
     padding-top: 2%;
-    padding-left: 0%;
+    padding-left: 40%;
     padding-right:5%;
     padding-bottom: 5%;
     font-size: 2.5vw;
@@ -370,10 +370,10 @@
   }
 
   h4.email{
-    position: absolute;
+    position: relative;
     top: 0%;
     left: 0%;
-    font-size: 105%;
+    font-size: 150%;
   }
 
   .container_two.contact{
@@ -537,15 +537,16 @@ div.img_relative.labtop{
   }
 
   .img_labtop{
-	  display: none;
-    /*top: 0px;
+  transform: scaleY(-1);
+    top: 0px;
     overflow:hidden;
-	 zoom: 20%;*/
+	 zoom: 15%;
   }
 
   .img_plant{
-	  display: none;
-    /*left: 0%;*/
+    top: 2%;
+	  zoom: 12%;
+	  left: 15%;
   }
 
   img.resume_pdf{
