--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -679,7 +679,7 @@ h4.email a{
 
   h4.instagram{
     margin-right: 0%;
-	transition: all .1s ease-in-out;
+	/*transition: all .1s ease-in-out;*/
   }	
 	
 
