--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -158,7 +158,7 @@
     margin-right: -5%;
   }
 
-  h4.instagram{
+  h5.instagram{
     margin-right: 9%;
   }
 
@@ -261,10 +261,10 @@
     width: 100vw;
   }
 
-  h4 a,
-  h4 > a:visited,
-  h4 > a:link,
-  h4 > a:active{
+  h4  a,
+  h4  > a:visited,
+  h4  > a:link,
+  h4  > a:active{
     padding: 10px 30px 20px 30px;
     opacity: 1;
     font-size: 3vw;
@@ -369,7 +369,7 @@
     width: 105%;
   }
 
-  h4.email{
+  h4.email {
     position: relative;
     top: 0%;
     left: 0%;
@@ -555,10 +555,10 @@ div.img_relative.labtop{
 
 
 
-  h4 a,
-  h4 > a:visited,
-  h4 > a:link,
-  h4 > a:active{
+  h4  a,
+  h4  > a:visited,
+  h4  > a:link,
+  h4  > a:active{
     /*padding: 10px 20px 20px 20px;*/
     opacity: 1;
     font-size: 5vw;
@@ -654,7 +654,7 @@ div.img_relative.labtop{
 #totop 
 	{display: none;}
 	
-h4.email{
+h4.email h5{
 	position: relative;
 	margin: auto;
 	left: 0vw;
