--- a/stylesheet/contact.css
+++ b/stylesheet/contact.css
@@ -77,9 +77,8 @@ h4.linkedin a:hover {
     transition: all .1s ease-in-out;
 }
 
-h4.email a:hover,
-h4.facebook a:hover,
-/*h4.instagram1 a:hover*/ {
+h4.email a:hover
+h4.facebook a:hover {
     transition: all .1s ease-in-out;
 }
 
